# transVideo

./: .gitignore  1-Acquisition.py  2-Vocal-Isolation.py  3-asr-diarization.py  4-translation.py  5-tts.py  6-merge.py  CLAUDE.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-26-tts-closed-loop-alignment.md  2026-03-26-tts-smoothing.md
docs/superpowers/specs/: 2026-03-26-tts-closed-loop-alignment-design.md
