[project]
name = "transvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-separator[cpu]>=0.41.0",
    "curl-cffi~=0.13.0",
    "edge-tts>=7.2.7",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "whisperx>=3.7.4",
    "yt-dlp>=2025.12.8",
]
